// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card renders 1`] = `
.c0 {
  font-size: 16px;
  border: none;
  border-radius: 10px;
  padding: 32px;
  box-shadow: 0 2px 8px rgba(0,0,0,0.38);
}

<div
  class="c0"
  font-size="1"
/>
`;

exports[`Card renders with children 1`] = `
.c0 {
  font-size: 16px;
  border: none;
  border-radius: 10px;
  padding: 32px;
  box-shadow: 0 2px 8px rgba(0,0,0,0.38);
}

<div
  class="c0"
  font-size="1"
>
  <div />
</div>
`;
